--- a/views/home.ejs
+++ b/views/home.ejs
@@ -134,7 +134,7 @@
        // alert(data);
         
         $.ajax({
-            url: "https://localhost:7777/addOpportunity",
+            url: "https://10.20.20.12:9090/addOpportunity",
             type: "POST",
             async: false,
             data: data,
@@ -186,7 +186,7 @@
         //alert(data);
         
         $.ajax({
-            url: "https://localhost:7777/addLead",
+            url: "https://10.20.20.12:9090/addLead",
             type: "POST",
             async: false,
             data: data,
@@ -237,7 +237,7 @@ data=JSON.stringify(data);
 //alert(data);
 
 $.ajax({
-    url: "https://localhost:7777/addAccount",
+    url: "https://10.20.20.12:9090/addAccount",
     type: "POST",
     async: false,
     data: data,
@@ -289,7 +289,7 @@ data=JSON.stringify(data);
 //alert(data);
 
 $.ajax({
-    url: "https://localhost:7777/addContact",
+    url: "https://10.20.20.12:9090/addContact",
     type: "POST",
     async: false,
     data: data,
@@ -417,7 +417,7 @@ chart3.render();  }
 
             var tableData = "";
 
-            var url = "https://localhost:7777/showEmployees";
+            var url = "https://10.20.20.12:9090/showEmployees";
 
             $.ajax({
                 url: url,
@@ -445,7 +445,7 @@ chart3.render();  }
 
             var tableData = "";
 
-            var url = "https://localhost:7777/showAccount";
+            var url = "https://10.20.20.12:9090/showAccount";
 
             $.ajax({
                 url: url,
@@ -478,7 +478,7 @@ chart3.render();  }
 
             var tableData = "";
 
-            var url = "https://localhost:7777/showContact";
+            var url = "https://10.20.20.12:9090/showContact";
 
             $.ajax({
                 url: url,
@@ -512,7 +512,7 @@ chart3.render();  }
 
             var tableData = "";
 
-            var url = "https://localhost:7777/showLeads";
+            var url = "https://10.20.20.12:9090/showLeads";
 
             $.ajax({
                 url: url,
@@ -546,7 +546,7 @@ chart3.render();  }
 
             var tableData = "";
 
-            var url = "https://localhost:7777/showOpportunity";
+            var url = "https://10.20.20.12:9090/showOpportunity";
 
             $.ajax({
                 url: url,
