--- a/views/home.ejs
+++ b/views/home.ejs
@@ -108,6 +108,9 @@
     </style>
 
     <script>
+      /* $("#success").click(function(){
+        $("#myModal").modal();
+       });*/
         function editenable() {
             $("#faname").prop("disabled", false);
             $("#Prospect").prop("disabled", false);
@@ -123,6 +126,21 @@
             $("#save").prop("hidden", false);
             $("#cancel").prop("hidden", false);
 
+        }
+        function clearFormAccount() {
+            $("#faname").prop("disabled", true);
+            $("#Prospect").prop("disabled", true);
+            $("#paacc").prop("disabled", true);
+            $("#website").prop("disabled", true);
+            $("#acccat").prop("disabled", true);
+            $("#vertical").prop("disabled", true);
+            $("#country").prop("disabled", true);
+            $("#city").prop("disabled", true);
+            $("#state").prop("disabled", true);
+            $("#owner").prop("disabled", true);
+            $("#edit").show();
+            $("#save").prop("hidden", true);
+            $("#cancel").prop("hidden", true);
         }
 
         function addOpportunity() {
@@ -512,14 +530,16 @@
                             "<td >" + result[i].state + "</td>" +
                             "<td >" + result[i].owner + "</td>" +
                             //"<td onclick='accountdelete(" + result[i].id + ")'>" + '<button class="btn btn-sm btn-danger" >Delete</button>' + "</td>"
-                            "<td >" + '<button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#myModal" data-backdrop="static"  data-keyboard="false">Delete</button>' + "</td>"
+                            "<td onclick='deletedisplay(" + result[i].id + ")'>" + '<button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#myModal" data-backdrop="static"  data-keyboard="false">Delete</button>' + "</td>"
                         "</tr>";
+
                     }
                     // alert(tableData);
 
                     $("#accountTable").html(tableData);
                 }
             });
+            
         }
         function accountdisplay(i) {
             console.log("working");
@@ -542,12 +562,12 @@
                     $("#city").val(result[0].city);
                     $("#state").val(result[0].state);
                     $("#owner").val(result[0].owner);
-                    // $("#editmodal").text(namedata)
+                  
 
                     //var array=json.parse(result)
                 }
             });
-
+            clearFormAccount();
         }
         function updateaccount() {
             console.log("function entered");
@@ -621,9 +641,26 @@
            // window. alert("record updated successfully");
             
         }
-        function accountdelete(i) {
+        function deletedisplay(i) {
             console.log("working");
-            var url = "https://localhost:9090/account/" + i;
+            var url = "https://localhost:9090/delete/" + i;
+            console.log(url);
+            $.ajax({
+                url: url,
+                type: "GET",
+                success: function (result) {
+                    console.log(result);
+                   var c= $("#Daid").text(result[0].id);
+                   console.log(c);
+                }
+            });
+
+        }
+        function accountdelete() {
+            var id = $("#Daid").text();
+            //console.log(id);
+           // console.log("working");
+            var url = "https://localhost:9090/account/" + id;
             console.log(url);
             $.ajax({
                 url: url,
@@ -632,11 +669,14 @@
                 contentType: "application/json",
                 dataType: "json",
                 success: function (result) {
-
+                   // $("#Aid").text(result[0].id);
 
                 }
             });
-            AccountLoad();
+
+            AccountLoad()
+           $("#myModal").modal();
+
         }
         function contactLoad() {
 
@@ -872,19 +912,7 @@
             $('#accountCity').val('');
             $('#accountOwner').val('');
         }
-        function clearFormAccount() {
-            $("#faname").prop("disabled", true);
-            $("#Prospect").prop("disabled", true);
-            $("#paacc").prop("disabled", true);
-            $("#website").prop("disabled", true);
-            $("#acccat").prop("disabled", true);
-            $("#vertical").prop("disabled", true);
-            $("#country").prop("disabled", true);
-            $("#city").prop("disabled", true);
-            $("#state").prop("disabled", true);
-            $("#owner").prop("disabled", true);
-
-        }
+       
         function resetFormOpp() {
             $('#SalesCycle').prop('selectedIndex', 0);
             $('#Salesphase').prop('selectedIndex', 0);
@@ -1709,7 +1737,7 @@
                                                             <b class="modal-title"
                                                                 style="font-size:15px;margin-left:9px;">New Account:</b>
 
-                                                            <button type="button" class="close"
+                                                            <button type="button" class="close" onclick="clearFormAccount()"
                                                                 data-dismiss="modal">&times;</button>
                                                         </div>
 
@@ -1919,9 +1947,9 @@
 
 
                                 </table>
-                                <p id="Aid" style="display:none;"></p>
+                               
                             </div>
-                            <div class="modal" id="myModal" style="height: auto;">
+                            <div class="modal" id="myModal" style="height: auto;width: 505px;top: 21%;left: 61%;background-color: #333333;border: none;border-radius: 0px;box-shadow: none;">
                                     <div class="modal-dialog">
                                       <div class="modal-content">
                                       
@@ -1933,12 +1961,13 @@
                                         
                                         <!-- Modal body -->
                                         <div class="modal-body" style="padding: 12px;text-align: center;">
+                                            <p id="Daid" style="display:none;"></p>
                                           <b>Do you want to delete this record permanently?</b>
                                         </div>
                                         
                                         <!-- Modal footer -->
                                         <div class="modal-footer" style="border-top: none;padding: 0px 15px 15px">
-                                          <button type="submit" onclick='accountdelete("+ result[i].id +");' class="btn btn-primary btn-sm" data-dismiss="modal">Delete</button>
+                                          <button type="submit" id='success' onclick='accountdelete();' class="btn btn-primary btn-sm" data-dismiss="modal">Delete</button>
                                          <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal">Cancel</button>
                                         </div>
                                         
